# rouvens-arch-kickstart

./: CHANGELOG.md  Cargo.toml  README.md
.github/scripts/: upload-asset-to-release.sh
.github/workflows/: pipe.yaml
assets/: alacritty-config  foot-config  gnome_shortcuts.sh  terminator-config  tmux-config
src/: alacritty.rs  bindkey.rs  bluetooth.rs  chaotic_aur.rs  chaoticaur.rs  chaoticaur_test.rs  common_system_fixes.rs  docker.rs  emoji_support.rs  filesystem.rs  fish_default_shell.rs  foot_terminal.rs  fs_trim.rs  gnome_app_indicator.rs  gnome_arc_gtk_theme.rs  gnome_arc_menu.rs  gnome_blur_my_shell.rs  gnome_dark_mode.rs  gnome_dash_to_panel.rs  gnome_date_menu_formatter.rs  gnome_dracula_gtk_theme.rs  gnome_just_perfection.rs  gnome_mouse_acceleration.rs  gnome_over_amplification.rs  gnome_setting.rs  gnome_shortcuts.rs  gnome_system_monitor.rs  gnome_tap_to_click.rs  gnome_tiling_assistant.rs  gnome_user_themes.rs  gnome_window_buttons.rs  gnomeappindicator.rs  gnomedashtopanel.rs  gnomesystemmonitor.rs  gtk_ui.rs  hibernate_lid_closed.rs  kitty.rs  main.rs  micro.rs  mouse_acceleration.rs  (+27 more)
