[package]
name = "rouvens-arch-kickstart"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.9.0"
ureq = "2.9.7"
scraper = "0.19.0"
dyn-clone = "1.0.17"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
strip = true # Strip debug symbols
